<resources>
    <string name="app_name">AmTherapy</string>
    <string name="mainText_ab">Расчет дозы антибактериальных препаратов для детей</string>
    <string name="mainText_pr">Расчет дозы жаропонижающих препаратов для детей</string>
    <string name="mainText_gem">Расчет дозы антианемических препаратов для детей</string>
    <string name="vVodText">Введите массу тела ребенка в килограммах</string>
    <string name="AB_text">Введите массу тела пациента. Затем, выберите группу препаратов, которую вы собираетесь назначить</string>
    <string name="PR_text">Введите массу тела пациента. Затем, выберите группу препаратов, которую вы собираетесь назначить</string>
    <string name="GEM_text">Введите массу тела пациента. Затем, выберите препарат, который вы собираетесь назначить</string>
    <string name="BEN_text">В окне установите дату рождения ребенка:</string>
    <string name="BEN_child_text">Установите возраст ребенка в месяцах:</string>
    <string name="button_start">Группы препаратов</string>
    <string name="text_AB_desig">Выберите антибактериальный препарат, который собираетесь назначить</string>
    <string name="button_amoxi">Amoxicillinum</string>
    <string name="button_clari">Clarithromycin</string>
    <string name="button_azi">Azithromycinum</string>
    <string name="button_cefur">Cefuroximum</string>
    <string name="button_cefdinir">Cefdinir</string>
    <string name="button_cefixime">Cefixime</string>
    <string name="button_amox_clav">Amoxicillin/clavulanic acid</string>
    <string name="button_change_weight">Изменить вес ребенка</string>
    <string name="text_amoxi_main">Объем и кратность приема препарата.</string>
    <string name="text_amoxi_prep">Выберите одну из приведенных ниже форм выпуска. Объем приема препарата для суспензии, таблетированной и капсульной формы является усредненным значением. Выбирая один из приведенных ниже препаратов, оценивайте возраст ребенка. Помните, последнее слово за врачом, а не за программой.</string>
    <string name="text_amox_125_5">Суспензия Амоксициллин 125мг/5мл</string>
    <string name="text_amox_250_5">Суспензия Амоксициллин 250мг/5мл</string>
    <string name="text_amoxit_250">Таблетки Амоксициллин 250мг</string>
    <string name="text_amoxit_500">Таблетки Амоксициллин 500мг</string>
    <string name="text_amoxit_750">Таблетки Амоксициллин 750мг</string>
    <string name="text_amoxit_1000">Таблетки Амоксициллин 1000мг</string>
    <string name="button_amox_dif">Назначить другой АБ этому ребенку</string>
    <string name="button_amox_any">Расcчитать дозировку для другого ребенка</string>
    <string name="text_clari_125_5">Суспензия Кларитромицин 125мг/5мл</string>
    <string name="text_clari_250_5">Суспензия Кларитромицин 250мг/5мл</string>
    <string name="text_clarit_250">Таблетки Кларитромицин 250мг</string>
    <string name="text_clarit_500">Таблетки Кларитромицин 500мг</string>
    <string name="text_azi_100_5">Суспензия Азитромицин 100мг/5мл</string>
    <string name="text_azi_200_5">Суспензия Азитромицин 200мг/5мл</string>
    <string name="text_azi_250">Таблетки/капсулы Азитромицин 250мг</string>
    <string name="text_azi_500">Таблетки/капсулы Азитромицин 500мг</string>
    <string name="text_cefur_125_5">Суспензия Цефуроксим 125мг/5мл</string>
    <string name="text_cefur_250_5">Суспензия Цефуроксим 250мг/5мл</string>
    <string name="text_cefur_250">Таблетки Цефуроксим 250мг</string>
    <string name="text_cefur_500">Таблетки Цефуроксим 500мг</string>
    <string name="text_cefdinir_125_5">Суспензия Цефдинир 125мг/5мл</string>
    <string name="text_cefdinir_250_5">Суспензия Цефдинир 250мг/5мл</string>
    <string name="text_cefdinir_300">Таблетки Цефдинир 300мг</string>
    <string name="text_cefixim_100_5">Суспензия Цефиксим 100мг/5мл</string>
    <string name="text_cefixim_400">Таблетки Цефиксим 400мг</string>
    <string name="text_aug_125_31_25_5">Суспензия Амоксициллин клав. 125мг/31.25мг/5мл</string>
    <string name="text_aug_200_28_5_5">Суспензия Амоксициллин клав. 200мг/28.5мг/5мл</string>
    <string name="text_aug_400_57_5">Суспензия Амоксициллин клав. 400мг/57мг/5мл</string>
    <string name="text_aug_250_125">Суспензия Амоксициллин клав. 250мг/62.5мг/5мл</string>
    <string name="text_aug_500_125">Таблетки Амоксициллин клав. 500мг/125мг</string>
    <string name="text_aug_875_125">Таблетки Амоксициллин клав. 875мг/125мг</string>
    <string name="middle_desig">Выберите группу препаратов, которые собираетесь назначить</string>
    <string name="text_buttom_ab">Антибактериальные препараты</string>
    <string name="text_buttom_pr">Жаропонижающие препараты</string>
    <string name="text_pr_main">Выберите жаропонижающий препарат, который собираетесь назначить</string>
    <string name="buttom_paracet">Paracetamolum</string>
    <string name="buttom_ibuprof">Ibuprophenum</string>
    <string name="text_pr_top">Объем разового приема препарата</string>
    <string name="text_pr_prep">Выберите одну из приведенных ниже форм выпуска. Объем препарата для суппозитория, суспензии и таблетированной форм является усредненным значением. Показаны минимальная и максимальная разовые дозировки. Выбирая один из приведенных ниже препаратов, обязательно оценивайте возраст ребенка.</string>
    <string name="text_pr_prep_paracet">Максимальная кратность применения жаропонижающего средства 4 раза в сутки.</string>
    <string name="text_pr_prep_ibuprof">Максимальная кратность применения жаропонижающего средства 3 раза в сутки.</string>
    <string name="text_par_sup_80">Суппозиторий Парацетамола 80 мг</string>
    <string name="text_par_sup_125">Суппозиторий Парацетамола 125 мг</string>
    <string name="text_par_sup_150">Суппозиторий Парацетамола 150 мг</string>
    <string name="text_par_sup_250">Суппозиторий Парацетамола 250 мг</string>
    <string name="text_par_sus_120_5">Суспензия Парацетамола 120мг/5мл</string>
    <string name="text_par_sus_30_1">Суспензия Парацетамола 30мг/1мл</string>
    <string name="text_par_tab_200">Таблетки Парацетамола 200 мг</string>
    <string name="text_par_tab_500">Таблетки Парацетамола 500 мг</string>
    <string name="text_ib_sup_60">Суппозиторий Ибупрофена 60 мг</string>
    <string name="text_ib_sus_100_5">Суспензия Ибупрофена 100мг/5мл</string>
    <string name="text_ib_sus_200_5">Суспензия Ибупрофена 200мг/5мл</string>
    <string name="text_ib_tab_200">Таблетки Ибупрофена 200 мг</string>
    <string name="text_ib_tab_400">Таблетки Ибупрофена 400 мг</string>
    <string name="a_amtherapy_text">AmTherapy. Расчет дозировок лекарственных средств, а также оценка физического развития ребенка.</string>
    <string name="text_lec">Расчет антибактериальных препаратов</string>
    <string name="text_lec_pr">Расчет жаропонижающих препаратов</string>
    <string name="text_lec_gem">Расчет антианемических препаратов</string>
    <string name="text_weight">Расчет долженствующей массы новорожденного и объем кормления</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo5">TODO</string>
    <string name="text_wei1">Расчет массы тела и объем кормления новорожденного по месяцам</string>
    <string name="text_wei2">Введите массу тела ребенка при рождении в граммах</string>
    <string name="text_FU">©FrankUniverse</string>
    <string name="todo3">TODO</string>
    <string name="text_prepare_act">Приложение AmTherapy - Android приложение, предназначенное в первую очередь для врачей-педиатров, студентов педиатрических факультетов медицинских ВУЗов. Использование данного ресурса родителями пациентов также не запрещено.</string>
    <string name="text_prepare_act_1">1.1 Данное Приложение не является рекламным ресурсом и предназначено для расчета дозировок наиболее распространенных форм выпуска лекарственных препаратов, расчета энергетической потребности детей с БЭН, а также оценке физического развития ребенка. Все расчеты производятся в соответствии с актуальными
    инструкциями лекарственных средств (минимальные и максимальные разовые дозировки, максимальная суточная дозировка), а также рекомендациями ВОЗ по оценке физического развития ребенка и правил вскармливания. Расчёт основного обмена для детей также осуществляется на основании рекомендаций ВОЗ (значения конверсионных коэффициентов для расчета энергетических потребностей).</string>
    <string name="text_prepare_act_2">1.2 Приложение AmTherapy является бесплатным ресурсом, целью которого является упрощение
     ведения расчетов медицинского работника педиатрического профиля.</string>
    <string name="text_prepare_act_3">1.3 Пользователь Приложения (далее Пользователь) – физическое лицо, установившее данное приложение на мобильное устройство, а также являющийся его пользователем.</string>
    <string name="text_prepare_act_4"> 1.4 Разработчик Приложения (далее Разработчик) – лицо, осуществляющее управление Приложением и иные действия, связанные с его использованием.</string>
    <string name="text_else">1. Общие положения:</string>
    <string name="text_else_1">2. Права и обязанности Разработчика:</string>
    <string name="text_else_2">3. Права и обязанности Пользователя:</string>
    <string name="text_prepare_act_5">2.1 Разработчик обязан предоставить Пользователям доступ ко всем информационным материалам Приложения.</string>
    <string name="text_prepare_act_6">2.2 Разработчик осуществляет текущее управление Приложением, определяет состав сервисов Приложением, его структуру и внешний вид, разрешает и ограничивает доступ к Приложению, осуществляет иные принадлежащие ему права.</string>
    <string name="text_prepare_act_7">2.3 Разработчик обязуется приложить усилия для дальнейшего расширения и развития Приложения, в зависимости от рекомендаций Пользователей, а также для устранения случаев некорректной работы Приложения.</string>
    <string name="text_prepare_act_8">2.4 Разработчик не несет ответственность за ущерб Пользователя, возникшей вследствие некорректного использования содержимого Приложения и отказа следовать настоящему Соглашению.</string>
    <string name="text_prepare_act_9">2.5 Разработчик не несет ответственность за несовпадение ожидаемых Пользователем и реально полученных услуг.</string>
    <string name="text_prepare_act_10">3.1 Пользователь обязуется предоставлять Разработчику информацию о некорректно работающем разделе приложения.</string>
    <string name="text_prepare_act_11">3.2 При назначении лекарственного препарата, пользователь обязан самостоятельно оценивать возраст ребенка и индивидуальную непереносимость того или иного лекарственного средства.</string>
    <string name="text_else_3">4. Обратная связь:</string>
    <string name="text_prepare_act_13">Все предложения и пожелания вы можете оставлять в разделе "Оценки и отзывы" Play Market, а также присылать на e-mail:</string>
    <string name="text_email">fr4nk.universe@gmail.com</string>
    <string name="text_FU_prep">Copyright © FrankUniverse</string>
    <string name="text_supp_act">FrankUniverse благодарит Вас за установку данного приложения! Приложение AmTherapy призвано максимально облегчить расчетную деятельность педиатра, а также помочь молодым родителям.
       В дальнейшем приложение будет только расширяться, и мы надеемся, что AmTherapy станет неотъемлемой частью Вашей терапевтической деятельности и сэкономит Вам драгоценные минуты свободного времени.</string>
    <string name="text_supp_act_1">Если Вам понравилось приложение - обязательно оцените его и оставьте комментарий. Если приложение Вас не устроило - обязательно сообщите что именно Вы бы хотели изменить.
     Если Вы хотите добавить новые группы препаратов, обязательно пишите об этом.</string>
    <string name="text_supp_act_3">Мы благодарим каждого, кто не остался равнодушным и оценил приложение и оставил отзыв!</string>
    <string name="text_supp_act_4">Желаем Вам успехов в Вашем нелегком труде и скорейшего выздоровления всех Ваших пациентов!</string>
</resources>