<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prepare_view"
    android:background="@color/nat2"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:scrollbars="none"
        tools:ignore="MissingConstraints,ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_prepare"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_else"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_else"
            style="@style/MyTextStyle_prep"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_1"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_1"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />


        <TextView
            android:id="@+id/text_prepare_2"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_2"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_3"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_3"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_4"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_4"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />

        <TextView
            android:id="@+id/text_else_1"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_else_1"
            style="@style/MyTextStyle_prep"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_5"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_5"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_6"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_6"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_7"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_7"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_8"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_8"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_9"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_9"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />

        <TextView
            android:id="@+id/text_else_2"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_else_2"
            style="@style/MyTextStyle_prep"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_10"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_10"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_11"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_11"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />


        <TextView
            android:id="@+id/text_else_3"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_else_3"
            style="@style/MyTextStyle_prep"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_prepare_13"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/text_prepare_act_13"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            style="@style/MyTextStyle_prep"
            android:text="@string/text_email"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />

        <TextView
            android:id="@+id/textView109"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="584dp" />

        <TextView
            android:id="@+id/text_fu_prep"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/text_FU_prep"
            style="@style/MyTextStyle_prep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView120"
            android:layout_width="93dp"
            android:layout_height="15dp"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="686dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>